minor changes, deleted some old ednotes

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5971,9 +5971,9 @@ a binary supports relation between OMS languages and institutions,
 and a binary supports relation between OMS languages and
 serializations. 
  Each language is required to have a default logic and serialization. Moreover, we assume
- that logics, languages and serializations are uniquely identified by names, and we use
- the notation $\Gamma(n)$ for the logic, language or serialization identified by the name
- $n$ int the heterogeneous logical environment $\Gamma$.\ednote{@Till: new notation, check.}
+ that institutions, institution morphisms and institution comorphisms
+ are uniquely identified by names, and we use
+ the notation $\Gamma(n)$ for the institution, institution morphism and institution comorphism identified by the name $n$ int the heterogeneous logical environment $\Gamma$.
 
 
  It is required that for each institution in the heterogeneous logical environment there is a trivial signature
@@ -6672,7 +6672,7 @@ The semantics for an \syntax{ExtendingOMS} has been defined above.
 
 If $o$ is a \syntax{ClosureOMS},
 $$sem(\Gamma, o) = (I,\Sigma,\cM',\bot)$$
-where \todonote{didn't look at this} \todonote{free, cofree, maximize are missing, see \syntax{MinType}. TM: I do not understand, they are there!} \ednote{what is $sem(\syntax{CircVars},\Sigma)$? TM: CircVars is a set of symbols, and $sem(CircVars,\Sigma)$ is just the subsignature of $\Sigma$ induced by CircVars. I think this is the same as in the subsubsection ``Semantics of sets of symbols'', just the notation needs to be adapted to that section. (By the way: could we remove the global env $\Gamma$ from the semantics of sets of symbols? I think it is not needed.)
+where \ednote{what is $sem(\syntax{CircVars},\Sigma)$? TM: CircVars is a set of symbols, and $sem(CircVars,\Sigma)$ is just the subsignature of $\Sigma$ induced by CircVars. I think this is the same as in the subsubsection ``Semantics of sets of symbols'', just the notation needs to be adapted to that section. (By the way: could we remove the global env $\Gamma$ from the semantics of sets of symbols? I think it is not needed.)
 Moreover, $\Sigma_{min}$ can be replaced with $\Sigma$, and then the equation involving ClosureType disappears.
 }
 
@@ -6919,7 +6919,7 @@ it defaults to the identity comorphism of the current logic.
 
 If $t$ is a \syntax{NamedLanguageTranslation},
 $$sem(\Gamma,t)=\Gamma(O.\syntax{omsLanguageTranslationRef})$$
-\noindent where $\Gamma(O.\syntax{omsLanguageTranslationRef}$ is
+\noindent where $\Gamma(O.\syntax{omsLanguageTranslationRef})$ is
 an institution comorphism.  This is defined only if the
 domain of $\rho$ is the current logic of $\Gamma$.
 
@@ -7652,8 +7652,7 @@ where $i_1$ and $i_2$ identify the occurrences of the same node $i$
 in $G_1$ and $G_2$ respectively,
 with a theorem link 
 from $i_1$ to $i_2$ labeled with the identity
-on $\Sig(i_1)$. \ednote{check formulation}
-
+on $\Sig(i_1)$. 
 
 %%%%%%%%%%%%%%%%%%%%
 
@@ -7737,7 +7736,7 @@ $$
 sem(\Gamma, d) = \Gamma'
 $$
 \noindent where $O_1 = d.\syntax{moduleType}.\syntax{module}$, 
-$O_2 = d.\syntax{moduleType}.\syntax{whole}$, $c = d.\syntax{conservativityType}$, $\Sigma = sem(\Gamma, d.\syntax{interfaceSignature})$,
+$O_2 = d.\syntax{moduleType}.\syntax{whole}$, $c = d.\syntax{conservativityType}$,\\ $\Sigma = sem(\Gamma, d.\syntax{interfaceSignature})$,
 $\Gamma' = \Gamma[d.\syntax{moduleName}\mapsto 
 (G,\iota, N_2,N_1)]$
 and $G$ is the graph 
