network morphism ednote

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7427,7 +7427,7 @@ $\sigma : G_1\to G_2$ is
 \item a 
 functor $\sigma^G: Shape(G_1)\to Shape(G_2)$, where given a network $G$, its shape 
 $Shape(G)$ is a graph with same nodes and edges as $G$ but with no labels of nodes,
-\ednote{@Till: is this enough?}
+\ednote{@Till: is this enough? TM: I think so. But yhw a functor? Shouldn't it be a graph homomorphism, since $Shape(G)$ is a graph?}
 \item a natural transformation $\sigma^M : G_1 \to \sigma^G;G_2$
 \end{enumerate}
  such that
