enabled subsubsection numbering

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -58,6 +58,11 @@
 \textheight 24cm
 \voffset -1cm
 
+
+\setcounter{secnumdepth}{3
+\setcounter{tocdepth}{3}
+\def\toclevel@subsubsection{3}}
+
 \usepackage{changebar}
  %
    \newcommand{\cbs}[0]{\xspace}
