added two sentences on Annex K in section 6 ( issue #254)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2895,7 +2895,6 @@ The next three clauses are \emph{informative}. This clause provides some backgro
 Clause \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) as an SMOF compliant meta model.
 Further,  the same clause also provides a human friendly text serialization of the abstract syntax of 
 \DOL (\emph{normative}). 
-
 Annex \ref{a:EBNF} contains the abstract syntax specified using Extended
 Backus–Naur Form (EBNF) 
 (\emph{informative}).
@@ -2912,7 +2911,7 @@ translation that conform with \DOL  (\emph{normative}).
 \medskip \noindent Various languages are shown to  conform to \DOL in
 informative annexes: OWL2 (annex \ref{a:owl}), Common Logic
 (annex~\ref{a:cl}), RDF and RDF Schema (annex~\ref{a:rdfs}), UML class
-diagrams (annex~\ref{a:uml-class}, TPTP (annex~\ref{a:TPTP}), and
+diagrams (annex~\ref{a:uml-class}), TPTP (annex~\ref{a:TPTP}), and
 \CASL (annex \ref{a:casl}).
 
 \medskip \noindent 
@@ -2921,6 +2920,11 @@ whose conformance with \DOL is established in the preceding annexes (\emph{infor
 Annex \ref{a:ext-graph} extends the graph presented in Annex \ref{a:graph}  by a list of OMS
 language whose conformance with \DOL will be established by a registry
 (\emph{informative}).
+
+\medskip \noindent 
+Annex \ref{a:queries} discusses an extension of \DOL{} by queries. This extension is needed
+to support query languages (e.g., SQL or SPARQL) in \DOL{} and to enable query related constructs
+for OMS in other DOL conformant languages (\emph{informative}). 
 
 \medskip \noindent 
 Annex \ref{a:uses} provides of \DOL texts, which provide examples for all \DOL constructs, which 
