removed semantics of sentences

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6261,8 +6261,8 @@ $sem(\Gamma_{n-1}, libItem_n)= \Gamma'$.
 
 \semdom{sem(\Gamma, \syntax{LibraryItem})= \Gamma'}
 
-For a \syntax{LibraryImport} $libImport$,
-$$sem(\Gamma, libImport) = \Gamma \cup \Gamma'$$
+For a \syntax{LibraryImport} $\mathit{libImport}$,
+$$sem(\Gamma, \mathit{libImport}) = \Gamma \cup \Gamma'$$
 
 \noindent where $sem(\Gamma, libImport.\syntax{libraryName}) = anIRI$ and
 $sem(anIRI) = \Gamma'$.
@@ -7249,13 +7249,13 @@ $sem(\Gamma, \Sigma_1,\Sigma_2, gsmi) = (s,s)$
 where $sem(\Gamma,\Sigma_1, gsmi) = s$
 
 
-\sssclause{Semantics of sentences}
+%\sssclause{Semantics of sentences}
 
-\semdom{sem(\Gamma, \Sigma, \syntax{Sentence}) = \varphi}
-
-If $sen$ is a \syntax{Sentence},
-$$sem(\Gamma, \Sigma, sen) = \varphi$$
-\noindent where $\varphi\in Sen(\Sigma)$ and the analysis is done in a logic-specific way.\ednote{This should be added to the heterogeneous logical env.}
+%\semdom{sem(\Gamma, \Sigma, \syntax{Sentence}) = \varphi}
+%
+%If $sen$ is a \syntax{Sentence},
+%$$sem(\Gamma, \Sigma, sen) = \varphi$$
+%\noindent where $\varphi\in Sen(\Sigma)$ and the analysis is done in a logic-specific way.\ednote{This should be added to the heterogeneous logical env.}
 
 \sssclause{Semantics of references}
 
