used uniform notations in the semantics of OMS

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6713,79 +6713,79 @@ $Env(\Gamma, O)$ is obtained from
 
 %Translation
 
-The semantics of a \syntax{TranslationOMS} $O'$ is given by
+The semantics of a \syntax{TranslationOMS} $O$ is given by
 \begin{itemize}
- \item $\Inst(O') = J$,
- \item $\Sig(O') = \Sigma'$, when 
- $sem(\Gamma, \Sig(O'.\syntax{oms}), O'.\syntax{omsTranslation}) = ((\Phi, \alpha, \beta) : \Inst(O'.\syntax{oms}) \to J, \sigma:\Phi(\Sig(O'.\syntax{oms}))\to \Sigma') $,
- \item $\Mod(O') = \{M \in \Mod(\Sigma') \,|\, \beta_\Sigma(M\forget\sigma)\in \Mod(O'.\syntax{oms})\}$
- \item $\Th(O') = \{   Sen^J(\sigma)(\alpha_\Sigma(\delta))  \mid \delta \in \Th(O'.\syntax{oms}) \}$. It is defined only if $O'.\syntax{oms}$ is flattenable.
- \item $Env(\Gamma, O')$ is obtained from 
-       $\Gamma'' = Env(\Gamma, O'.\syntax{oms})$
-       by extending $\Gamma''.imports$
-        with a new node for $O'$ labeled as in the items above
-        and with a new edge from the node of $O'.\syntax{oms}$ to the node of $O'$
+ \item $\Inst(O) = J$,
+ \item $\Sig(O) = \Sigma'$, when 
+ $sem(\Gamma, \Sig(O.\syntax{oms}), O.\syntax{omsTranslation}) = ((\Phi, \alpha, \beta) : \Inst(O.\syntax{oms}) \to J, \sigma:\Phi(\Sig(O.\syntax{oms}))\to \Sigma') $,
+ \item $\Mod(O) = \{M \in \Mod(\Sigma') \,|\, \beta_\Sigma(M\forget\sigma)\in \Mod(O.\syntax{oms})\}$
+ \item $\Th(O) = \{   Sen^J(\sigma)(\alpha_\Sigma(\delta))  \mid \delta \in \Th(O.\syntax{oms}) \}$. It is defined only if $O.\syntax{oms}$ is flattenable.
+ \item $Env(\Gamma, O)$ is obtained from 
+       $\Gamma' = Env(\Gamma, O.\syntax{oms})$
+       by extending $\Gamma'.imports$
+        with a new node for $O$ labeled as in the items above
+        and with a new edge from the node of $O.\syntax{oms}$ to the node of $O$
         labeled with $((\Phi, \alpha, \beta), \sigma)$.
 \end{itemize}
 %Reduction
 
-The semantics of a \syntax{ReductionOMS} $O'$ is
+The semantics of a \syntax{ReductionOMS} $O$ is
 \begin{itemize}
 
-  \item $\Inst(O') = J$, 
-  \item $\Sig(O') = \Sigma'$, when
-   $sem(\Gamma, \Sig(O'.\syntax{oms}), O'.\syntax{reduction}) = ((\Phi, \alpha, \beta) : \Inst(O'.\syntax{oms}) \to J,\sigma:\Sigma'\to \Phi(\Sig(O'.\syntax{oms})))$,
-  \item $\Mod(O') = \{\beta_\Sigma(M)\forget{\sigma} \,|\, M\in \Mod(O'.\syntax{oms})\}$
-  \item $\Th(O') = \bot$
-  \item $Env(\Gamma, O')$ is obtained from 
-       $\Gamma'' = Env(\Gamma, O'.\syntax{oms})$
-       by extending $\Gamma''.imports$
-        with a new node for $O'$ labeled as in the items above
-        and with a new edge from the node of $O'$ to the node of 
-        $O'.\syntax{oms}$ labeled with
+  \item $\Inst(O) = J$, 
+  \item $\Sig(O) = \Sigma'$, when
+   $sem(\Gamma, \Sig(O.\syntax{oms}), O.\syntax{reduction}) = ((\Phi, \alpha, \beta) : \Inst(O.\syntax{oms}) \to J,\sigma:\Sigma'\to \Phi(\Sig(O.\syntax{oms})))$,
+  \item $\Mod(O) = \{\beta_\Sigma(M)\forget{\sigma} \,|\, M\in \Mod(O.\syntax{oms})\}$
+  \item $\Th(O) = \bot$
+  \item $Env(\Gamma, O)$ is obtained from 
+       $\Gamma' = Env(\Gamma, O.\syntax{oms})$
+       by extending $\Gamma'.imports$
+        with a new node for $O$ labeled as in the items above
+        and with a new edge from the node of $O$ to the node of 
+        $O.\syntax{oms}$ labeled with
         $((\Phi, \alpha, \beta),\sigma)$.
 \end{itemize}
 
 %Module Extract 
 
-The semantics of an \syntax{ExtractionOMS} $O'$ is
+The semantics of an \syntax{ExtractionOMS} $O$ is
 \begin{itemize}
-  \item $\Inst(O') = \Inst(O'.\syntax{oms})$
-  \item $\Sig(O') = \Sigma'$,
-  \item $\Th(O') = \Delta'$
-  \item $\Mod(O')$ is the class of $Th(O')$-models
-  \item $Env(\Gamma, O')$ is obtained from 
-       $\Gamma'' = Env(\Gamma, O'.\syntax{oms})$
-       by extending $\Gamma''.imports$
-        with a new node for $O'$ labeled as in the items above
-        and with a new edge from the node of $O'$ to the node of 
-        $O'.\syntax{oms}$ labeled with
-        the inclusion of $\Sigma'$ in $\Sig(O'.\syntax{oms})$
+  \item $\Inst(O) = \Inst(O.\syntax{oms})$
+  \item $\Sig(O) = \Sigma'$,
+  \item $\Th(O) = \Delta'$
+  \item $\Mod(O)$ is the class of $Th(O)$-models
+  \item $Env(\Gamma, O)$ is obtained from 
+       $\Gamma' = Env(\Gamma, O.\syntax{oms})$
+       by extending $\Gamma'.imports$
+        with a new node for $O$ labeled as in the items above
+        and with a new edge from the node of $O$ to the node of 
+        $O.\syntax{oms}$ labeled with
+        the inclusion of $\Sigma'$ in $\Sig(O.\syntax{oms})$
 \end{itemize}
 where 
-$sem(\Gamma, (\Sig(O'.\syntax{oms}), \Th(O'.\syntax{oms})), O'.\syntax{extraction}) = 
+$sem(\Gamma, (\Sig(O.\syntax{oms}), \Th(O.\syntax{oms})), O.\syntax{extraction}) = 
 (\Sigma',\Delta')$.
 %which in turn amounts to stating that each $\Sigma' \cup \Sigma$-reduct
 %of a $\Mod(\Sig(O))$-model can be expanded to a $\Mod(\Sig(O))$-model
 %satisfying $\Th(O) \setminus \Delta'$.
 
 %Approximation
-The semantics of an \syntax{ApproximationOMS} $O'$ is
+The semantics of an \syntax{ApproximationOMS} $O$ is
 \begin{itemize}
   \item $\Inst(O) = \cI'$,
   \item $\Sig(O) = \Phi(\Sigma)$
-  \item $\Th(O) = \alpha^{-1}_{\Sig(O'.\syntax{oms})}(\Th(O'.\syntax{oms})^\bullet)\cap\Sen^{\cI'}(\Sig(O'.\syntax{oms}))$%
-\footnote{In  practice, one looks for a finite subset that still is logically equivalent to this set.}, i.e.\ that part of $\Th(O'.\syntax{oms})$ that can be expressed in the smaller signature and logic 
+  \item $\Th(O) = \alpha^{-1}_{\Sig(O.\syntax{oms})}(\Th(O.\syntax{oms})^\bullet)\cap\Sen^{\cI'}(\Sig(O.\syntax{oms}))$%
+\footnote{In  practice, one looks for a finite subset that still is logically equivalent to this set.}, i.e.\ that part of $\Th(O.\syntax{oms})$ that can be expressed in the smaller signature and logic 
   \item $\Mod(O)$ is the class of $\Th(O)$-models
-  \item $Env(\Gamma, O')$ is obtained from 
-       $\Gamma'' = Env(\Gamma, O'.\syntax{oms})$
-       by extending $\Gamma''.imports$
-        with a new node for $O'$ labeled as in the items above
-        and with a new edge from the node of $O'.\syntax{oms}$ to the node of $O'$ 
-        labeled with $((\Phi,\alpha,\beta),\iota: \Phi(\Sigma) \to \Sig(O'.\syntax{oms}))$ 
+  \item $Env(\Gamma, O)$ is obtained from 
+       $\Gamma' = Env(\Gamma, O.\syntax{oms})$
+       by extending $\Gamma'.imports$
+        with a new node for $O$ labeled as in the items above
+        and with a new edge from the node of $O.\syntax{oms}$ to the node of $O$ 
+        labeled with $((\Phi,\alpha,\beta),\iota: \Phi(\Sigma) \to \Sig(O.\syntax{oms}))$ 
 \end{itemize}
 
-\noindent where $(\rho = (\Phi,\alpha,\beta):\cI\to\cI',\Sigma) = sem(\Gamma, (\Inst(O'.\syntax{oms}), \Sig(O'.\syntax{oms})), O'.\syntax{approximation})$.
+\noindent where $(\rho = (\Phi,\alpha,\beta):\cI\to\cI',\Sigma) = sem(\Gamma, (\Inst(O.\syntax{oms}), \Sig(O.\syntax{oms})), O.\syntax{approximation})$.
 
 %Filtering
 The semantics of a \syntax{FilteringOMS} $O$
